[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/tilesets/lever2.png" type="Texture" id=1]
[ext_resource path="res://assets/tilesets/lever1.png" type="Texture" id=2]
[ext_resource path="res://World/Lever.gd" type="Script" id=3]
[ext_resource path="res://Music and SFX/lever.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 27.6073, 19.7591 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 15.0826
height = 60.6496

[node name="Lever" type="StaticBody2D"]
script = ExtResource( 3 )

[node name="FlipOff" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="FlipOn" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 12.1255 )
shape = SubResource( 1 )

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2( -18.4327, 16.0543 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="LeverSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
[connection signal="body_entered" from="DetectionArea" to="." method="_on_Lever_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_Lever_body_exited"]
